# game

./: .gitignore  README.md  compile_commands.json
client/: README.md  dummy.json  prototype.py  test.py
server/: CMakeLists.txt  README.md
server/include/: bullet.hpp  config.hpp  enemy.hpp  game_state.hpp  player.hpp  server.hpp
server/src/: bullet.cpp  enemy.cpp  game_state.cpp  main.cpp  player.cpp  server.cpp
